// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rendered prompts corpus-select 1`] = `
"You are choosing which works by Jorge Luis Borges to measure a prose style from.

## What you are given

A title, a year, a word count and an opening passage for each candidate.
You are not given the full texts, and you do not need them: you are
choosing what is worth downloading, not reading the corpus.

## What to return

At most 12 work ids, each with a one-line reason.
A reason is not a summary of the work. It says why this work earns a
place in a sample of an author's prose, in the terms below.

## Sample across career period and across form

An author's prose changes over a working life, and it changes between a
short story and a novel. A sample drawn from one decade, or from one
form, measures that decade or that form and reports it as the author.
Spread the selection across the years available and across the forms
available, and prefer a spread to a set of the most famous titles.

## Prefer a single translator where the choice exists

A translation is the prose an English reader has, and two translators are
two prose styles. Where the same author is available through more than
one, choose works sharing a translator; where they are not, take what is
there. Do not drop a work solely for having a different translator if
dropping it would cost the spread.

## The reason is shown to the reader

Each reason is rendered as a line under the stage while it runs, so it
names the work and the criterion it satisfies — the period it covers, the
form it adds, the translator it shares. Write it as a statement a reader
can check against the list above.

## Candidates

- id: gutenberg:1
  title: Ficciones
  year: 1944
  words: 40000
  opens: I owe the discovery of Uqbar to the conjunction.
- id: gutenberg:2
  title: The Aleph
  year: 1949
  words: 38000
  opens: The man arrived from the south one night."
`;

exports[`rendered prompts style-extract 1`] = `
"You are describing the prose style of Jorge Luis Borges from evidence.

## What you are given

The prosody of the corpus, already measured by code, and passages drawn
from the selected works. Each passage carries an id.

### Measured prosody

- sentence length: mean 28.4, p10 9, p90 52
- semicolons per thousand words: 11.2
- em dashes per thousand words: 8.4
- dialogue ratio: 0.06
- type-token ratio (MATTR): 0.48
- latinate ratio: 0.34 (suffix proxy)

## What to return

The qualitative half of a style card: point of view and narrator
distance, register and diction, opening and closing moves, recurring
images, and the patterns this author avoids. Each field is a claim, and
each claim carries the passage it was read from.

A good value is specific enough to be wrong. "Formal register" is not a
reading; "a register that reaches for the Latinate abstraction where a
concrete noun would do" is one, and a passage can be pointed at.

## Cite what you can point at, and nothing else

Every field you return is either backed by a passage id from the list
below, or returned with no citation at all. A field you cannot point at a
passage for is returned without a citation, never with an invented one.
An uncited claim is honest and useful; a claim citing a passage that does
not support it is worse than no claim, because a reader who follows the
citation stops trusting the ones that are right.

## Do not restate the prosody

The measured block above is given as evidence for your reading. It is
already on the card, computed from the full texts. Do not return any of
its numbers as a claim, and do not describe the author as writing "long
sentences" when the number is there — say what the length is doing.

## Passages

### b1c9f2e0-0000-7000-8000-abcdefabcdef — Ficciones

The lamp turned. The sea did not."
`;

exports[`rendered prompts clarify 1`] = `
"You are asking the questions the idea left open, before a story is
outlined in a measured author's style.

## What you are given

- idea: a lighthouse keeper who has never seen the sea
- constraints: no dialogue
- length: flash
- author: Jorge Luis Borges
- round: 2

### The style card

voice.pov: close third, one consciousness per story
diction.register: Latinate abstraction beside a concrete noun

### Answers so far

- Whose account are we reading?
  decides: which frame the story takes
  answer: the catalogue frame
- Does anyone witness it?
  decides: whether the comet is seen
  answer: skipped — you choose

## What to return

Questions, and whether you have enough to proceed. Each question carries
the decision it resolves, why the answers so far did not settle it, and
two to four suggested answers.

## Every question states the decision it resolves

A question that cannot name the decision it resolves is not asked. Not
"tell me more about the tone" — that names no decision and no answer to
it changes what gets written. Name the fork: which of two frames the
story takes, whether the comet is seen or only reported, whose account
the reader is inside.

Say why the answers so far did not settle it. If they did, do not ask.

## Ask from the card, not from a checklist

A question that would be asked of any author is not asked. "What point of
view?" is a form to fill in. "The corpus opens inside a review, a
catalogue or a footnote in most of the works measured, and your idea
names a man and a comet but no frame" is a question this author's prose
produced, and it is the only kind worth a reader's attention.

## Suggestions are concrete

Two to four options, each a thing the story could actually be.
Never "it depends", never "any of the above", never a suggestion that
restates the question. The reader picks one or skips; a skip is recorded
and you choose, so a vague option is a decision nobody made."
`;

exports[`rendered prompts outline 1`] = `
"You are writing a beat sheet for a story to be drafted in a measured
author's style.

## What you are given

- idea: a lighthouse keeper who has never seen the sea
- constraints: none
- length: flash, about 1,000 words
- author: Jorge Luis Borges

### The style card

voice.pov: close third, one consciousness per story
diction.register: Latinate abstraction beside a concrete noun

### Answers, including the skips

- Whose account are we reading?
  answer: the catalogue frame

## What to return

A title and an ordered list of beats, and separately the choices you made
that no question covered.

## Return every choice you made that no question covered

A skipped question is a choice you made and the reader knows they skipped
it. A choice nobody asked about is one they will meet for the first time
in the finished story — the narrator's distance, whether the comet is
seen, what the last line is doing. Return those, each with the reason.
They become the decisions log, and the log is honest only if it holds the
decisions the reader did not know were being made.

## The beat count follows the word target

A beat is a scene or a movement, and it needs room. At about
1,000 words, a beat has roughly
167 words
if there are six of them. Choose a count the length can carry: fewer,
longer beats at flash length; more at novelette. A beat sheet with
twenty beats for a thousand words is a synopsis, not an outline."
`;

exports[`rendered prompts draft, single call 1`] = `
"You are writing prose in the measured style of Jorge Luis Borges.

## What you are given

- title: The Return of the Comet
- length: flash, about 1,000 words

### The style card

voice.pov: close third, one consciousness per story
diction.register: Latinate abstraction beside a concrete noun

### Measured targets

sentence length mean 28.4 (p10 9, p90 52); semicolons 11.2/1k

### Beats

1. The catalogue names a comet nobody saw.
2. The keeper reads the entry.

## What to return

The prose, as markdown. Nothing else — no preamble, no notes on what you
did, no heading naming the beats.

## The targets describe a corpus, not a quota

The numbers above were measured across this author's works. They are what
the prose should aim at, and they are not a budget to spend. Where
hitting a target would cost the story its coherence at this length — not
enough words to carry sentences of that length, a beat that cannot be
told in the sentence count available — the story wins, and the drift is
expected and will be reported.

Do not pad to reach a mean. Do not split a sentence that wants to be one.
The report exists to say where the prose departed from the corpus and
why; it does not exist to be satisfied.

## The anti-patterns are prohibitions

These are not suggestions and not a stylistic preference. They are what
the measured author does not do, and a draft that does them is not in
this style however well it reads:

- no dream reveals
- no twist in the final line

## Do not write the provenance label

Every story this product renders carries a line saying it was generated
and by whom. That line is added when the document is rendered, and it is
required there. Writing your own version of it here produces two, and the
one you write is not the one the export guarantees.

## Exemplars

Passages from the author's own work, verbatim. They are evidence of what
the card describes, not text to reuse: do not quote them, do not echo
their sentences, do not lift their images.

### Ficciones — the catalogue frame

The lamp turned. The sea did not."
`;

exports[`rendered prompts draft, sequential scene 1`] = `
"You are writing prose in the measured style of Jorge Luis Borges.

## What you are given

- title: The Return of the Comet
- length: long, about 12,000 words

### The style card

voice.pov: close third, one consciousness per story
diction.register: Latinate abstraction beside a concrete noun

### Measured targets

sentence length mean 28.4

### What earlier scenes established

The keeper is called Ansel. It is late autumn.

### Beats

2. The keeper reads the entry.

## What to return

The prose, as markdown. Nothing else — no preamble, no notes on what you
did, no heading naming the beats.

## The targets describe a corpus, not a quota

The numbers above were measured across this author's works. They are what
the prose should aim at, and they are not a budget to spend. Where
hitting a target would cost the story its coherence at this length — not
enough words to carry sentences of that length, a beat that cannot be
told in the sentence count available — the story wins, and the drift is
expected and will be reported.

Do not pad to reach a mean. Do not split a sentence that wants to be one.
The report exists to say where the prose departed from the corpus and
why; it does not exist to be satisfied.

## The anti-patterns are prohibitions

These are not suggestions and not a stylistic preference. They are what
the measured author does not do, and a draft that does them is not in
this style however well it reads:


## Do not write the provenance label

Every story this product renders carries a line saying it was generated
and by whom. That line is added when the document is rendered, and it is
required there. Writing your own version of it here produces two, and the
one you write is not the one the export guarantees.

## Exemplars

Passages from the author's own work, verbatim. They are evidence of what
the card describes, not text to reuse: do not quote them, do not echo
their sentences, do not lift their images.

"
`;

exports[`rendered prompts critique 1`] = `
"You are reading a draft against a measured style card for Jorge Luis Borges.

## What you are given

The card, the measures already computed against the corpus, and the
draft.

### The style card

voice.pov: close third, one consciousness per story
diction.register: Latinate abstraction beside a concrete noun

### Measures

- prosodyTarget.sentenceLength.mean: 18.2 against 28.4 — drift
- prosodyTarget.punctuation.semicolon: 10.4 against 11.2 — pass

### The draft

The lamp turned. The sea did not.

## What to return

Findings. Each names a path, states a number and its consequence, and
says what a revision would do about it.

## Every finding states a number and its consequence

A finding without a digit in it is dropped by the engine, so one without
a number is a wasted finding. Not "the sentences feel short" — "sentences
run a mean of 18.2 against 28.4 in the corpus; the corpus holds two
clauses in one breath where this draft takes two sentences, so the
rhythm the card describes never arrives."

The number is the argument. The consequence is what makes it worth
acting on: say what the prose loses, not that a value differs.

## Cite a path that exists

Every finding names a path from the card or from the measures above —
\`voice.narratorDistance\`, \`prosodyTarget.sentenceLength.mean\`. A path
nothing carries cannot be rendered beside the value it is about, and the
reader gets a claim with nothing to check it against."
`;

exports[`rendered prompts revise, whole draft 1`] = `
"You are revising prose against measured findings for Jorge Luis Borges.

### The style card

voice.pov: close third, one consciousness per story
diction.register: Latinate abstraction beside a concrete noun

### What to fix

- prosodyTarget.sentenceLength.mean: sentences run 18.2 against 28.4
  remedy: join three candidate pairs with a semicolon

### The draft

The lamp turned. The sea did not.

## What to return

The revised markdown, and the list of findings you actually acted on.

## Revise against these measures, not toward better writing

Each finding above names a path and a number. Change what those name and
leave the rest alone. "Improve the style" is not the instruction and is
not an improvement that can be checked: the report will re-measure, and a
revision that moved a number nobody asked about is drift you introduced.

A finding you did not act on is reported as not acted on. That is a
legitimate outcome — a remedy can cost more than the drift — and it is
better than a change nobody can trace to a reason."
`;

exports[`rendered prompts revise, marked span 1`] = `
"You are revising prose against measured findings for Jorge Luis Borges.

### The style card

voice.pov: close third, one consciousness per story
diction.register: Latinate abstraction beside a concrete noun

### What to fix



### Before the marked span

Once, in the year of the catalogue.

### The marked span

The lamp turned.

### After the marked span

The sea did not.

## What to return

The revised markdown, and the list of findings you actually acted on.

## Revise against these measures, not toward better writing

Each finding above names a path and a number. Change what those name and
leave the rest alone. "Improve the style" is not the instruction and is
not an improvement that can be checked: the report will re-measure, and a
revision that moved a number nobody asked about is drift you introduced.

A finding you did not act on is reported as not acted on. That is a
legitimate outcome — a remedy can cost more than the drift — and it is
better than a change nobody can trace to a reason.

## Replace only the marked span

The text before and after it is given so the replacement joins
cleanly. Return the whole document with the span replaced and every
other sentence identical, character for character. A revision that
touched a paragraph the reader did not select is one they cannot
undo."
`;

exports[`rendered prompts summarize-beat 1`] = `
"You are keeping continuity for a story called "The Return of the Comet" that is
being written one scene at a time.

## What you are given

The scenes written so far, in order.

### Scene 1

The catalogue named a comet nobody saw.

### Scene 2

Ansel read the entry twice and set the lamp turning.

## What to return

Plain prose, a few sentences. Not a summary of the plot: the next scene
is written from the beat sheet and does not need to be told what happened.

## Carry the names, the facts and the unresolved threads

What the next scene cannot invent for itself: what people and places are
called and how they were spelled, facts established that later prose must
not contradict — the time of year, who knows what, what was already
described — and the threads left open that the story has to come back to.

Everything else is in the beat sheet. Write what a scene would get wrong
without it."
`;
